# dataeng-observability-workshop

./: .gitignore  README.md  app.py  etl_output.csv  main.py  pyproject.toml  requirements.txt
comecando/: exemplo_02.py  exemplo_03.py  exemplo_04.py
exemplo_00/: README.md  exemplo_01.py
exemplo_01/: README.md  compose.yml  exemplo_00.py  exemplo_01_metrics_protheus copy.py
exemplo_02/: client.py  intrumentation.py  intrumentation_metrics.py  server_automatic.py  server_manual.py  server_programmatic.py
hello_world_otel/: compose.yaml
hello_world_otel/app/: app.py
opentelemetry_helloword/: README.md  main.py
src/: README.md  README_05.md  README_06.md  README_07_Dashboard.md  hello_world_00.py  hello_world_01.py  hello_world_02.py  hello_world_03.py  main.py  main_logfire_01.py  main_logfire_03.py  main_logfire_04.py  main_logfire_05.py  main_logfire_06.py  main_logfire_07_lag.py  pipeline.py  pipeline_local.py  pipeline_render.py  pipeline_render_looping.py
tests/: tests_pipeline.py
